<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/manageAccount"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <ImageView
        android:id="@+id/account_pic"
        android:layout_width="128dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/contentDescAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_account" />

    <ImageView
        android:id="@+id/edit_pic"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/edit"
        app:layout_constraintStart_toEndOf="@+id/account_pic"
        app:layout_constraintTop_toTopOf="@+id/account_pic"
        android:contentDescription="@string/edit_notes_here" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/mediumRed"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_pic" />

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="264dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/profile_settings_back_shape"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_account_buttons"
            android:elevation="5dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/log_out"
            android:textColor="@color/fullWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/profile_settings_button_border"
            android:elevation="5dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/change_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_account_buttons"
            android:elevation="5dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/change_password"
            android:textColor="@color/fullWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/profile_settings_button_border"
            android:elevation="5dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/delete_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/reset_email_field"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/Enter_Email"
        android:background="@drawable/profile_settings_button_border"
        android:hint="@string/Enter_Email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/reset_email_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_red_buttons"
        android:text="@string/change"
        android:textColor="@color/fullWhite"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_email_field"/>


    <EditText
        android:id="@+id/reset_password"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:autofillHints="@string/enter_password"
        android:background="@drawable/profile_settings_button_border"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/reset_password_confirm"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:autofillHints="@string/confirm"
        android:background="@drawable/profile_settings_button_border"
        android:hint="@string/con_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_red_buttons"
        android:text="@string/change"
        android:textColor="@color/fullWhite"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_confirm" />


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="150dp"
        android:minHeight="150dp"
        android:progress="50"
        android:secondaryProgress="100"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>