<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RadioGroup
        android:id="@+id/type_of_user"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingStart="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248"
        tools:ignore="RtlSymmetry">


        <RadioButton
            android:id="@+id/teacher_radio_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent2"
            android:text="@string/teacher"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/student_radio_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textStyle="bold"
            android:textColor="@color/colorAccent2"
            android:textSize="20sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/id_of_user"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/textfield"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:hint="@string/enter_new_id"
        android:imeActionLabel="@string/enter_your_id"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_of_user"
        tools:ignore="RtlSymmetry"
        android:autofillHints="@string/enter_new_id" />

    <Button
        android:id="@+id/addID"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/create_id"
        android:background="@color/mediumRed"
        android:textColor="@color/fullWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_of_user"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>