<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/confirmation_required"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ask_passkey"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/enter_password"
        android:background="@drawable/textfield"
        android:hint="@string/enter_password"
        android:imeActionLabel="@string/enter_your_id"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_mail"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/ask_mail"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/enter_password"
        android:background="@drawable/textfield"
        android:hint="@string/Enter_Email"
        android:imeActionLabel="@string/enter_your_id"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.171"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/delete_database"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:background="@color/mediumRed"
        android:text="@string/delete_database"
        android:textColor="@color/fullWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_passkey"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>