<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >


    <ImageView
        android:id="@+id/imageViewDeNotesStudent"
        android:layout_width="223dp"
        android:layout_height="160dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/student_trying_to_take_notes"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/studentnotes" />

    <TextView
        android:id="@+id/instruction_1TV"
        android:layout_width="379dp"
        android:layout_height="42dp"
        android:layout_marginTop="68dp"
        android:text="@string/notes_instruction1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDeNotesStudent" />

    <TextView
        android:id="@+id/instruction_3TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/notes_instruction3"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_1TV" />

    <Button
        android:id="@+id/fetch_notes_student"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_account_buttons"
        android:fontFamily="sans-serif"
        android:padding="2dp"
        android:shadowColor="#ffffff"
        android:shadowDx="1"
        android:shadowDy="1"
        android:text="@string/fetch"
        android:textColor="@color/fullWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_3TV" />


</androidx.constraintlayout.widget.ConstraintLayout>